added google html

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
     </div>
     <div class="col-sm-5" ><br>
       <!-- Google map-->
-      <div id="map-container-google-1" class="z-depth-1-half map-container">
+      <div>
         <iframe src="https://maps.google.com/maps?q=Venkatarayapuram&t=&z=13&ie=UTF8&iwloc=&output=embed"
           frameborder="0" style="border:0" allowfullscreen></iframe>
       </div>
