--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <!-- <html lang="en"> -->
 
@@ -147,14 +148,14 @@
     <div class="row">
       <img class="col-sm-4 img" src="img/vertex1.jpg" alt="Generic placeholder image">
       <div class="col-sm-8">
-        <h4 class="mt-0">VERTEX Power conditioning  products  in our scope  of supply  are :</h4>
-        <li>Servo  Stabilizers</li>
+        <h4 class="mt-0">VERTEX Power conditioning  products  in our scope  of supply  are :</h4>
+        <li>Servo  Stabilizers</li>
         <li>Isolation Transformers</li>
         <li> Constant Voltage Transformers</li>
         <li> Step up & Step down Transformers </li>
-        <li> Spike Busters  & Filters </li>
-        <li> Online  UPS </li>
-        <li> Inverters  & Batteries </li>
+        <li> Spike Busters  & Filters </li>
+        <li> Online  UPS </li>
+        <li> Inverters  & Batteries </li>
 
       </div>
     </div><br>
@@ -163,26 +164,27 @@
   <div class="row text-center">
     <div class="col-sm-2"></div>
     <div class="col-sm-8"><br>
-      <p id="p1"> To fight for the universal cause of global warming, we are participating from our end  in 
+      <p id="p1"> To fight for the universal cause of global warming, we are participating from our end  in 
         educating our customers and implementation of energy conservative applications at their premises.</p><br>
     </div>
     <div class="col-sm-2"></div>
   </div>
 
   <div class="row text-center">
-    <div class="col-sm-5"><br>
+    <div class="col-sm-6"><br>
       <address>
         <h3>J S Power Services</h3>
+        <h5>(Head Office- Uppal, Hyderabad)</h5>
         G4 , 9-91-10/2 , Ramalayam Street<br>
         Venkatarayapuram Township ,<br>
         TANUKU , West Godavari Dist<br>
         Andhra Pradesh – 534215<br>
-        Ph : 8897998005 , 9391303796<br>
+        Ph : 8897998005 , 8046032355<br>
         Email:<a href="mailto:selasrini@yahoo.co.in">Sela Srinivas</a>.<br>
         Email:<a href="mailto:jspowerss@gmail.com">J S Power Services</a>.<br>
       </address>
     </div>
-    <div class="col-sm-5" ><br>
+    <div class="col-sm-4" ><br>
       <!-- Google map-->
       <div>
         <iframe src="https://maps.google.com/maps?q=Venkatarayapuram&t=&z=13&ie=UTF8&iwloc=&output=embed"
