--- a/products.html
+++ b/products.html
@@ -150,6 +150,32 @@
       </div><br></div>
     </div>  
 
+    <div class="row text-center">
+      <div class="col-sm-6"><br>
+        <address>
+          <h3>J S Power Services</h3>
+          <h5>(Head Office- Uppal, Hyderabad)</h5>
+          G4 , 9-91-10/2 , Ramalayam Street<br>
+          Venkatarayapuram Township ,<br>
+          TANUKU , West Godavari Dist<br>
+          Andhra Pradesh – 534215<br>
+          Ph : 8897998005 , 8046032355<br>
+          Email:<a href="mailto:selasrini@yahoo.co.in">Sela Srinivas</a>.<br>
+          Email:<a href="mailto:jspowerss@gmail.com">J S Power Services</a>.<br>
+        </address>
+      </div>
+      <div class="col-sm-4" ><br>
+        <!-- Google map-->
+        <div>
+          <iframe src="https://maps.google.com/maps?q=Venkatarayapuram&t=&z=13&ie=UTF8&iwloc=&output=embed"
+            frameborder="0" style="border:0" allowfullscreen></iframe>
+        </div>
+        <!--Google Maps -->
+  
+      </div>
+      <div class="col-sm-2"><br>
+    </div>
+
 <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
@@ -162,6 +188,8 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
     -->
+
+    
 
 </body>
 </html>
