--- a/index.html
+++ b/index.html
@@ -179,9 +179,10 @@
         Venkatarayapuram Township ,<br>
         TANUKU , West Godavari Dist<br>
         Andhra Pradesh – 534215<br>
-        Ph : 8897998005 , 8046032355<br>
         Email:<a href="mailto:selasrini@yahoo.co.in">Sela Srinivas</a>.<br>
+        Ph : <a href="tel:+918897998005">8897998005</a>.<br>
         Email:<a href="mailto:jspowerss@gmail.com">J S Power Services</a>.<br>
+        Ph : <a href="tel:+919492972375">9492972375</a>.<br>
       </address>
     </div>
     <div class="col-sm-4" ><br>
