--- a/products.html
+++ b/products.html
@@ -151,6 +151,15 @@
     </div>  
 
     <div class="row text-center">
+      <div class="col-sm-2"></div>
+      <div class="col-sm-8"><br>
+        <p id="p1"> To fight for the universal cause of global warming, we are participating from our end  in 
+          educating our customers and implementation of energy conservative applications at their premises.</p><br>
+      </div>
+      <div class="col-sm-2"></div>
+    </div>
+  
+    <div class="row text-center">
       <div class="col-sm-6"><br>
         <address>
           <h3>J S Power Services</h3>
@@ -159,9 +168,10 @@
           Venkatarayapuram Township ,<br>
           TANUKU , West Godavari Dist<br>
           Andhra Pradesh – 534215<br>
-          Ph : 8897998005 , 8046032355<br>
           Email:<a href="mailto:selasrini@yahoo.co.in">Sela Srinivas</a>.<br>
+          Ph : <a href="tel:+918897998005">8897998005</a>.<br>
           Email:<a href="mailto:jspowerss@gmail.com">J S Power Services</a>.<br>
+          Ph : <a href="tel:+919492972375">9492972375</a>.<br>
         </address>
       </div>
       <div class="col-sm-4" ><br>
@@ -175,7 +185,7 @@
       </div>
       <div class="col-sm-2"><br>
     </div>
-
+    
 <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
