--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
   <div class="row text-center">
     <div class="col-sm-2"></div>
     <div class="col-sm-8"><br>
-      <p id="p1"> The promoters and team of J S POWER SERVICES are technically qualified and have with
+      <p id="p1"> The promoters and team of J S POWER SERVICES are technically qualified and have
         immense experience in the field of Power Conditioning, instrumentation and Energy Management..
         By combining the years of experience, we are committed to offer quality products and after sales support.
         Exposure to different industrial segments has enabled us to provide electrical power studies and Energy
@@ -179,10 +179,10 @@
         Venkatarayapuram Township ,<br>
         TANUKU , West Godavari Dist<br>
         Andhra Pradesh – 534215<br>
-        Email:<a href="mailto:selasrini@yahoo.co.in">Sela Srinivas</a>.<br>
-        Ph : <a href="tel:+918897998005">8897998005</a>.<br>
-        Email:<a href="mailto:jspowerss@gmail.com">J S Power Services</a>.<br>
-        Ph : <a href="tel:+919492972375">9492972375</a>.<br>
+        Ph : <a href="tel:+918897998005">8897998005</a>, 
+        <a href="tel:+919492972375">9492972375</a>.<br>
+        Email:<a href="mailto:selasrini@yahoo.co.in">Sela Srinivas</a>,
+        <a href="mailto:jspowerss@gmail.com">J S Power Services</a>.<br>
       </address>
     </div>
     <div class="col-sm-4" ><br>
@@ -196,7 +196,6 @@
     </div>
     <div class="col-sm-2"><br>
   </div>
-
 
 
 
