--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     #img1,
     #img2 {
 
-      width: 330px;
+      width: 340px;
       height: 280px;
       /* left: 30px; */
       /* top: 0px;  */
@@ -121,7 +121,7 @@
       <p id="pp1"><b>CHECK</b></p>
     </div>
     <div class="col-sm-4 text-center">
-      <img src="img/vertex1.jpg" id="img2">
+      <img src="img/vertex4-edited(1).jpg" id="img2">
       <p id="pp2"><b>CONTROL</b></p>
     </div>
     <div class="col-sm-4 text-center">
@@ -145,7 +145,7 @@
 
   <div class="col-sm-12"><br>
     <div class="row">
-      <img class="col-sm-4 img" src="img/vertex1.jpg" alt="Generic placeholder image">
+      <img class="col-sm-4 img" src="img/vertex4-edited(1).jpg" alt="Generic placeholder image">
       <div class="col-sm-8">
         <h4 class="mt-0">VERTEX Power conditioning  products  in our scope  of supply  are :</h4>
         <li>Servo  Stabilizers</li>
