--- a/products.html
+++ b/products.html
@@ -79,7 +79,7 @@
           <p>Single Phase Servo Stabilisers are used to protect the sensitive equipment from voltage fluctuations caused due to switching ON/Off of heavy machinery, load distribution on the transformers, etc. Under varying voltage conditions the sensitive equipments like medical, analytical, audio/video, Computers, etc malfunction or can be damaged. VERTEX Stabiliser provides constant output voltage, 220 /230 volts with a tolerance of +/- 1% with high/low output voltage cut-off and overload cut-off. This ensures smooth operation and longer life for the equipments. Oilcooled stabilisers find their applications in industries like Spinning & Garment which are used to prevent the ingress of dust and foreign particles.</p>
           <p><b>Custom Designed : </b> Stabilizers of more than 20 kVA are also available with wider / shorter input voltage range & also with special output voltage, as per customer requirements.</p>
           <p><b>Applications : </b> Textile, Garment, Packaging, Medical, Analytical, UPS (bypass), Audio-Video, Printing, CNC machines, Offices/Commercial Complexes, etc.</p>
-          <button type="button" class="btn btn-success" onclick="window.open('https://www.vertexpower.co.in/pdf/servostabiliser-singlephase-aircooled.pdf');">Download Brochure</button>
+          <button type="button" class="btn btn-success" onclick="window.open('Brochures/pdf1.pdf');">Download Brochure</button>
         </div>
       </div>
      
@@ -93,7 +93,7 @@
           <p>Three Phase Aircooled Servo Stabilisers consists of three single phase units connected in star. The voltage sensing & correction is done in each phase independently with respect to the neutral, also called as unbalanced type voltage stabilisers. These stabilisers are used for various kinds of machinery like CNC, Textile, CT Scans, Printing, Packaging, Freezers, etc. VERTEX Stabiliser uses a Microcontroller (DSP) control system to provide a steady voltage and also protects the machinery from under/over voltage, overload, single phasing and phase reversal conditions.</p>
           <p><b>Custom Designed : </b> Stabilizers of more than 150 kVA are also available with wider / shorter input voltage range & also with special output voltage, as per customer requirements.</p>
           <p><b>Applications : </b> Textile, Garment, Packaging, Medical, Analytical, UPS (bypass), Printing, CNC machines , Lifts, Centralized AC, Telecom (GSM towers), Petrol Bunks, Residential, Food processing, Offices/Commercial Complexes etc.</p>
-          <button type="button" class="btn btn-success" onclick="window.open('https://www.vertexpower.co.in/pdf/servo-stabiliser-three-phase-aircooled.pdf');">Download Brochure</button>
+          <button type="button" class="btn btn-success" onclick="window.open('Brochures/pdf2.pdf');">Download Brochure</button>
         </div>
       </div>
 <br><br></div> 
@@ -106,7 +106,7 @@
           <p>Three Phase Oil Cooled Stabilisers are used to prevent ingress of dust and foreign particles. The transformer oil is used for cooling of transformers inside the stabilisers. Smaller ratings are widely used in industries like Spinning Mills & Garment. Higher rating stabilisers are used for large machinery, for a group of machinery or for the entire factory. Induction motors operate at high efficiency and improved power factor when supplied constant voltages. These stabilisers protect expensive manufacturing equipments from High/Low Voltages thus cutting on the maintenance cost.</p>
           <p><b>Custom Designed : </b> Stabilizers of more than 1000 kVA are also available with wider / shorter input voltage range & also with special output voltage, as per customer requirements.</p>
           <p><b>Applications : </b> Textile, Garment, Packaging, Medical, UPS (bypass), Printing, CNC machines , Centralized AC, Residential, Food processing, Offices/Commercial Complexes etc.</p>
-          <button type="button" class="btn btn-success" onclick="window.open('https://www.vertexpower.co.in/pdf/servo-stabiliser-three-phase-oilcooled.pdf');">Download Brochure</button>
+          <button type="button" class="btn btn-success" onclick="window.open('Brochures/pdf3.pdf');">Download Brochure</button>
         </div>
       </div> 
 <br><br></div> 
@@ -119,7 +119,7 @@
           <p>An isolation transformer is a transformer, often with symmetrical windings, which is used to decouple two circuits. An isolation transformer allows an AC signal or power to be taken from one device and fed into another without electrically connecting the two circuits. Isolation transformers block transmission of DC signals from one circuit to the other, but allow AC signals to pass. They also block interference caused by ground loops. Isolation transformers with electrostatic shields are used for power supplies for sensitive equipment such as computers, Lab Instruments, CNC Machines, Medical Equipments, etc.</p>
           <p><b>VERTEX Isolation Transformer </b> employs a unique multiple shielding technique that reduces the interwinding capacitance to a large extent and increases the DC isolation.</p>
           <p><b>Applications : </b>Medical, Analytical, UPS (bypass), Printing, CNC machines, Telecom (GSM towers), Residential, Food processing, Offices/Commercial Complexes etc.</p>
-          <button type="button" class="btn btn-success" onclick="window.open('https://www.vertexpower.co.in/pdf/isolation-transformers.pdf');">Download Brochure</button>
+          <button type="button" class="btn btn-success" onclick="window.open('Brochures/pdf4.pdf');">Download Brochure</button>
         </div>
       </div>
 <br><br></div> 
@@ -132,7 +132,7 @@
           <p>Constant Voltage Transformer (CVT) or Ferroresonant Transformer (Ferro) is a non-linear transformer, which passively provides a regulated voltage output through an electromagnetic phenomenon called ferroresonance (where the term ferroresonant transformer was derived). Ferroresonance is associated with the behavior of iron cores while operating near a point of magnetic saturation, wherein the core is so strongly magnetized that further variation in the input voltage results in little or no increase in magnetic flux. Basically, the ferroresonant action is a flux limiter rather than a voltage regulator. Nonetheless, with a fairly constant supply frequency, the CVT can maintain an almost constant output voltage even as the input voltage varies widely. In fact, the output voltage of the ferro varies about 1.2% for every 1% change in supply frequency, such that even with a considerable generator frequency change (2-Hertz), results in an output voltage change of only 4%.</p>
           <p>In short, CVTs are basically 1:1 transformers that are excited high on their saturation curves, thereby providing an output voltage which is not significantly affected by input voltage variations. This special characteristic is the foundation of the application of ferroresonant transformers as power conditioners.</p>
           <p><b>Applications : </b> Computers, Data Processing Equipment, Audio/Video Equipment, Photo Processing Equipment, Bio-Medical Equipment, Telex, Fax, Cash Registers, Electronic Type Writers, Control Panels, Etc… </p>
-          <button type="button" class="btn btn-success" onclick="window.open('https://www.vertexpower.co.in/pdf/cvt-single-phase-aircooled.pdf');">Download Brochure</button>
+          <button type="button" class="btn btn-success" onclick="window.open('Brochures/pdf5.pdf');">Download Brochure</button>
         </div>
     </div> 
 <br><br></div> 
@@ -145,7 +145,7 @@
           <p>In an online UPS, the batteries are always connected to the inverter, so that no power transfer switches are necessary. It is called a double-conversion UPS due to the rectifier directly driving the inverter, even when powered from normal AC current. When power loss occurs, the rectifier simply drops out of the circuit and the batteries keep the power steady and unchanged. When power is restored, the rectifier resumes carrying most of the load and begins charging the batteries, though the charging current may be limited to prevent the high-power rectifier from overheating the batteries and boiling off the electrolyte. The main advantage of an on-line UPS is its ability to provide an "electrical firewall" between the incoming utility power and sensitive electronic equipment.</p>
           <p>The online UPS is ideal for environments where electrical isolation is necessary or for equipment that is very sensitive to power fluctuations.</p>
           <p>The online UPS may be necessary when the power environment is "noisy", when utility power sags, outages and other anomalies are frequent, when protection of sensitive IT equipment loads is required, or when operation from an extended-run backup generator is necessary.</p>
-          <button type="button" class="btn btn-success" onclick="window.open('https://www.vertexpower.co.in/pdf/UPS-catalogue.pdf');">Download Brochure</button>
+          <button type="button" class="btn btn-success" onclick="window.open('Brochures/pdf6.pdf');">Download Brochure</button>
         </div>
       </div><br></div>
     </div>  
