--- a/services.html
+++ b/services.html
@@ -90,7 +90,7 @@
 
         <div class="col-sm-12">
           <div class="row">
-          <div class="col-sm-4 img1"><img src="img/vertex1.jpg" alt="..." style="width: 330px; height: 280px;"></div> 
+          <div class="col-sm-4 img1"><img src="img/vertex4-edited(1).jpg" alt="..." style="width: 330px; height: 280px;"></div> 
             <div class="col-sm-8">
               <h4 class="mt-0">Servo Stabilisers</h4><br>
               <p>Rectification and Upgradating Servo Stabilisers of any make. For higher rating stabilisers, services will be offered at customers premises itself.</p>
